Return of embedded sdk + fixes to module.info